test_scores/negative_dimers/features/Q86V81.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q86V81.pkl.xz